michaelswebstuff-ui/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: michaelswebstuff-ui
spec:
  redirectScheme:
    scheme: https
    permanent: true
