michaelswebstuff-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: michaelswebstuff-ui-service
  namespace: michaelswebstuff-ui
spec:
  selector:
    app: michaelswebstuff-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
