michaelswebstuff-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: michaelswebstuff-ui-ingress
  namespace: michaelswebstuff-ui
  # uncomment to enable middleware which forces users to use https rather then http
  # annotations:
  #   traefik.ingress.kubernetes.io/router.middlewares: michaelswebstuff-ui-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: michaelswebstuff.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: michaelswebstuff-ui-service
                port:
                  number: 80
    - host: www.michaelswebstuff.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: michaelswebstuff-ui-service
                port:
                  number: 80
  tls:
    - hosts:
        - michaelswebstuff.com
        - www.michaelswebstuff.com
      secretName: waittime-wizard-tls
